--- a/index.html
+++ b/index.html
@@ -12,10 +12,47 @@
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="img_569349.png">
     <script src="app.js"></script>
-    <title>Iceland Travelguide</title>
+    <title>Namibia Travelguide</title>
 </head>
 <body>
-  
+  <nav class="navbar fixed-top">
+    <div class="container-fluid">
+       <a class="navbar-brand" href="#">Travelguide</a>
+       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+         <span class="navbar-toggler-icon"></span>
+       </button>
+       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+          <div class="offcanvas-header">
+             <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Travelguide</h5>
+             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+               <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">HOME</a>
+               </li>
+               <li class="nav-item">
+                 <a class="nav-link" href="#">Link</a>
+               </li>
+               <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                </ul>
+                </li>
+             </ul>
+             <form class="d-flex mt-3" role="search">
+                <button class="btn btn-outline-success" type="submit">SEARCH</button>
+             </form>
+          </div>
+       </div>
+    </div>
+  </nav>
+
+  <div id="header" class="container-fluid" style="padding: 0px 0px 100px 0px;">
+     <img id="headerImg" src="sergi-ferrete-pWshkmAH4qA-unsplash-1.jpg">
+  </div>
 <noscript>Your browser doesn't support JavaScript!</noscript>
 </body>
 </html>
