--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="img_569349.png">
     <script src="app.js"></script>
@@ -52,6 +53,18 @@
 
   <div id="header" class="container-fluid" style="padding: 0px 0px 100px 0px;">
      <img id="headerImg" src="sergi-ferrete-pWshkmAH4qA-unsplash-1-first.jpg">
+     <div id="location">
+      <h5><i class="bi bi-geo-alt"></i> Location</h5>
+      <h6>JGX3+X49 Sandwich Harbour, Anichab, Namibia</h6>
+     </div>
+     <div id="climate">
+       <h5><i class="bi bi-cloud-sun"></i> Climate</h5>
+       <h6>Moderate</h6>
+     </div>
+     <div id="temperature">
+       <h5><i class="bi bi-thermometer-sun"></i> Temperature</h5>
+       <h6>16°C - 20 °C</h6>
+     </div>
   </div>
 <noscript>Your browser doesn't support JavaScript!</noscript>
 </body>
