added text to header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <nav class="navbar fixed-top">
     <div class="container-fluid">
-       <a class="navbar-brand" href="#">Travelguide</a>
+       <a class="navbar-brand" href="#" style="color: white;">Travelguide</a>
        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
          <span class="navbar-toggler-icon"></span>
        </button>
@@ -51,8 +51,8 @@
     </div>
   </nav>
 
-  <div id="header" class="container-fluid" style="padding: 0px 0px 100px 0px;">
-     <img id="headerImg" src="sergi-ferrete-pWshkmAH4qA-unsplash-1-first.jpg">
+  <div id="header" class="container-fluid" style="padding: 0px 0px 100px 0px; color: white;">
+     <img id="headerImg" src="sergi-ferrete-pWshkmAH4qA-unsplash-1-first.jpg" width="100%" height="auto">
      <div id="location">
       <h5><i class="bi bi-geo-alt"></i> Location</h5>
       <h6>JGX3+X49 Sandwich Harbour, Anichab, Namibia</h6>
@@ -64,6 +64,12 @@
      <div id="temperature">
        <h5><i class="bi bi-thermometer-sun"></i> Temperature</h5>
        <h6>16°C - 20 °C</h6>
+     </div>
+     <div id="description">
+        <h5 style="font-weight: 600;">Southern Africa / Republic of Namibia / Land of the Brave</h5>
+        <h6>Explore Africa's bright treasure that has 300 sunny days a year! From the Namib Desert in the north, 
+         to the Atlantic Ocean and the Namib-Naukluft National Park in the West, the Republic of Namibia
+         has the world's oldest natural beauties that can satisfy all tastes.</h6>
      </div>
   </div>
 <noscript>Your browser doesn't support JavaScript!</noscript>
