changed font weight

--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
   <div id="header" class="container-fluid" style="padding: 0px 0px 100px 0px; color: white;">
      <img id="headerImg" src="sergi-ferrete-pWshkmAH4qA-unsplash-1-first.jpg" width="100%" height="auto">
      <div id="location">
-      <h5><i class="bi bi-geo-alt"></i> Location</h5>
-      <h6>JGX3+X49 Sandwich Harbour, Anichab, Namibia</h6>
+      <h5 style="font-weight: 100;"><i class="bi bi-geo-alt"></i> Location</h5>
+      <h6 style="font-weight: 100;">JGX3+X49 Sandwich Harbour, Anichab, Namibia</h6>
      </div>
-     <div id="climate">
-       <h5><i class="bi bi-cloud-sun"></i> Climate</h5>
-       <h6>Moderate</h6>
+     <div id="climate" style="font-weight: 100;">
+       <h5 style="font-weight: 100;"><i class="bi bi-cloud-sun"></i> Climate</h5>
+       <h6 style="font-weight: 100;">Moderate</h6>
      </div>
      <div id="temperature">
-       <h5><i class="bi bi-thermometer-sun"></i> Temperature</h5>
-       <h6>16°C - 20 °C</h6>
+       <h5 style="font-weight: 100;"><i class="bi bi-thermometer-sun"></i> Temperature</h5>
+       <h6 style="font-weight: 100;">16°C - 20 °C</h6>
      </div>
      <div id="description">
         <h5 style="font-weight: 600;">Southern Africa / Republic of Namibia / Land of the Brave</h5>
