changed menu and added search input

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 <body>
   <nav class="navbar fixed-top">
     <div class="container-fluid">
-       <a class="navbar-brand" href="#" style="color: white;">Travelguide</a>
+       <a class="navbar-brand" href="#" style="color: white;"><i class="bi bi-compass"></i> Explorers</a>
        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-         <span class="navbar-toggler-icon"></span>
+         <i class="bi bi-list" style="color: white;font-size: 30px;"></i>
        </button>
        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-             <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Travelguide</h5>
+             <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><i class="bi bi-compass"></i> Explorers</h5>
              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -43,7 +43,8 @@
                 </ul>
                 </li>
              </ul>
-             <form class="d-flex mt-3" role="search">
+             <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">SEARCH</button>
              </form>
           </div>
@@ -51,7 +52,7 @@
     </div>
   </nav>
 
-  <div id="header" class="container-fluid" style="padding: 0px 0px 100px 0px; color: white;">
+  <div id="header" class="container-fluid" style="padding: 0px 0px 150px 0px; color: white;">
      <img id="headerImg" src="sergi-ferrete-pWshkmAH4qA-unsplash-1-first.jpg" width="100%" height="auto">
      <div id="location">
       <h5 style="font-weight: 100;"><i class="bi bi-geo-alt"></i> Location</h5>
