--- a/index.html
+++ b/index.html
@@ -73,6 +73,23 @@
          has the world's oldest natural beauties that can satisfy all tastes.</h6>
      </div>
   </div>
+
+  <div id="aboutNamibia" style="padding: 50px 60px 50px 80px;">
+     <div class="row">
+       <div class="col-sm"></div>
+       <div class="col-sm">
+          <h4>Namibia, The Land of the Brave</h4>
+          <h5>Unity, Liberty, Justice</h5>
+          <p>Namibia, officially known as the Republic of Namibia, is a country in Southern Africa. The name of the country is derived
+            from the word "Namib", which means "vast place", and is also the name of the oldest desert in the world. It is situated
+            between Namib and Kalahari deserts and its western border is the Atlantic Ocean! It shares borders with many African 
+            countries like Zambia and Angola to the north, Botswana to the east and South Africa to the south and east. The climate is 
+            overall arid and droughts are common, however, near the coastal area there are low temperatures, ifluenced by the cold 
+            north-flowing Benguela Current and frequent fogs.
+         </p>
+       </div>
+     </div>
+  </div>
 <noscript>Your browser doesn't support JavaScript!</noscript>
 </body>
 </html>
