--- a/index.html
+++ b/index.html
@@ -74,22 +74,17 @@
      </div>
   </div>
 
-  <div id="aboutNamibia" style="padding: 50px 60px 50px 80px;">
-     <div class="row">
-       <div class="col-sm"></div>
-       <div class="col-sm">
-          <h4>Namibia, The Land of the Brave</h4>
-          <h5>Unity, Liberty, Justice</h5>
-          <p>Namibia, officially known as the Republic of Namibia, is a country in Southern Africa. The name of the country is derived
-            from the word "Namib", which means "vast place", and is also the name of the oldest desert in the world. It is situated
-            between Namib and Kalahari deserts and its western border is the Atlantic Ocean! It shares borders with many African 
-            countries like Zambia and Angola to the north, Botswana to the east and South Africa to the south and east. The climate is 
-            overall arid and droughts are common, however, near the coastal area there are low temperatures, ifluenced by the cold 
-            north-flowing Benguela Current and frequent fogs.
-         </p>
-       </div>
-     </div>
-  </div>
+  <div id="aboutNamibia" style="padding: 50px 60px 50px 80px; text-align: center;">
+     <h4>Namibia, The Land of the Brave</h4>
+     <h5>Unity, Liberty, Justice</h5>
+      <p>Namibia, officially known as the Republic of Namibia, is a country in Southern Africa. The name of the country is derived
+      from the word "Namib", which means "vast place". It is situated between Namib and Kalahari deserts and its western border is the Atlantic Ocean! It shares borders with many African 
+      countries like Zambia and Angola to the north, Botswana to the east and South Africa to the south and east. The climate is 
+      overall arid and droughts are common, however, near the coastal area there are low temperatures and thick fogs. 
+      The country is home to diverse wildlife that is protected in 12 national parks. The capital is Windhoek. It is located
+      in central Namibia and is its largest city. Windhoek is the social, economic and cultural centre of the Namibia and is the home
+      of many enterprises, educational and cultural institutions and historical sites.</p>
+   </div>
 <noscript>Your browser doesn't support JavaScript!</noscript>
 </body>
 </html>
