--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fasthand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="img_569349.png">
     <script src="app.js"></script>
@@ -52,7 +55,7 @@
     </div>
   </nav>
 
-  <div id="header" class="container-fluid" style="padding: 0px 0px 150px 0px; color: white;">
+  <div id="header" class="container-fluid">
      <img id="headerImg" src="sergi-ferrete-pWshkmAH4qA-unsplash-1-first.jpg" width="100%" height="auto">
      <div id="location">
       <h5 style="font-weight: 100;"><i class="bi bi-geo-alt"></i> Location</h5>
@@ -76,7 +79,7 @@
 
   <div id="aboutNamibia" style="padding: 50px 60px 50px 80px; text-align: center;">
      <h4>Namibia, The Land of the Brave</h4>
-     <h5>Unity, Liberty, Justice</h5>
+     <h5 style="font-family: 'Fasthand', cursive; font-size: 25px;padding-bottom: 20px;">Unity, Liberty, Justice</h5>
       <p>Namibia, officially known as the Republic of Namibia, is a country in Southern Africa. The name of the country is derived
       from the word "Namib", which means "vast place". It is situated between Namib and Kalahari deserts and its western border is the Atlantic Ocean! It shares borders with many African 
       countries like Zambia and Angola to the north, Botswana to the east and South Africa to the south and east. The climate is 
