changed design for phones

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
   <div id="header" class="container-fluid">
      <img id="headerImg" src="sergi-ferrete-pWshkmAH4qA-unsplash-1-first.jpg" width="100%" height="auto">
+     <img id="headerImgPhone" src="erik-n1VbsCPevyk-unsplash copy.jpg" width="100%" height="810">
      <div id="location">
       <h5 style="font-weight: 100;"><i class="bi bi-geo-alt"></i> Location</h5>
       <h6 style="font-weight: 100;">JGX3+X49 Sandwich Harbour, Anichab, Namibia</h6>
@@ -71,13 +72,15 @@
      </div>
      <div id="description">
         <h5 style="font-weight: 600;">Southern Africa / Republic of Namibia / Land of the Brave</h5>
-        <h6>Explore Africa's bright treasure that has 300 sunny days a year! From the Namib Desert in the north, 
+        <p>Explore Africa's bright treasure that has 300 sunny days a year! From the Namib Desert in the north, 
          to the Atlantic Ocean and the Namib-Naukluft National Park in the West, the Republic of Namibia
-         has the world's oldest natural beauties that can satisfy all tastes.</h6>
+         has the world's oldest natural beauties that can satisfy all tastes.</p>
      </div>
   </div>
 
-  <div id="aboutNamibia" style="padding: 50px 60px 50px 80px; text-align: center;">
+
+
+  <div id="aboutNamibia">
      <h4>Namibia, The Land of the Brave</h4>
      <h5 style="font-family: 'Fasthand', cursive; font-size: 25px;padding-bottom: 20px;">Unity, Liberty, Justice</h5>
       <p>Namibia, officially known as the Republic of Namibia, is a country in Southern Africa. The name of the country is derived
