--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="A travelguide for Namibia">
     <meta name="keywords" content="HTML5, CSS3,Bootstrap5,travelguide, Namibia">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,11 +22,12 @@
   <nav class="navbar fixed-top">
     <div class="container-fluid">
        <a class="navbar-brand" href="#" style="color: white;"><i class="bi bi-compass"></i> Explorers</a>
+       <span class="navbar-text" style="font-size: 20px;color: white;">Discover the world</span>
        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
          <i class="bi bi-list" style="color: white;font-size: 30px;"></i>
        </button>
        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-          <div class="offcanvas-header">
+         <div class="offcanvas-header">
              <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><i class="bi bi-compass"></i> Explorers</h5>
              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
@@ -52,33 +53,31 @@
              </form>
           </div>
        </div>
-    </div>
+      </div>
   </nav>
 
   <div id="header" class="container-fluid">
      <img id="headerImg" src="sergi-ferrete-pWshkmAH4qA-unsplash-1-first.jpg" width="100%" height="auto">
      <img id="headerImgPhone" src="erik-n1VbsCPevyk-unsplash copy.jpg" width="100%" height="810">
      <div id="location">
-      <h5 style="font-weight: 100;"><i class="bi bi-geo-alt"></i> Location</h5>
-      <h6 style="font-weight: 100;">JGX3+X49 Sandwich Harbour, Anichab, Namibia</h6>
+      <h5 class="fw-light"><i class="bi bi-geo-alt"></i> Location</h5>
+      <h6 class="fw-light">JGX3+X49 Sandwich Harbour, Anichab, Namibia</h6>
      </div>
-     <div id="climate" style="font-weight: 100;">
-       <h5 style="font-weight: 100;"><i class="bi bi-cloud-sun"></i> Climate</h5>
-       <h6 style="font-weight: 100;">Moderate</h6>
+     <div id="climate">
+       <h5 class="fw-light"><i class="bi bi-cloud-sun"></i> Climate</h5>
+       <h6 class="fw-light">Moderate</h6>
      </div>
      <div id="temperature">
-       <h5 style="font-weight: 100;"><i class="bi bi-thermometer-sun"></i> Temperature</h5>
-       <h6 style="font-weight: 100;">16°C - 20 °C</h6>
+       <h5 class="fw-light"><i class="bi bi-thermometer-sun"></i> Temperature</h5>
+       <h6 class="fw-light">16°C - 20 °C</h6>
      </div>
      <div id="description">
         <h5 style="font-weight: 600;">Southern Africa / Republic of Namibia / Land of the Brave</h5>
-        <p>Explore Africa's bright treasure that has 300 sunny days a year! From the Namib Desert in the north, 
+        <h6 class="fs-6 lh-sm">Explore Africa's bright treasure that has 300 sunny days a year! From the Namib Desert in the north, 
          to the Atlantic Ocean and the Namib-Naukluft National Park in the West, the Republic of Namibia
-         has the world's oldest natural beauties that can satisfy all tastes.</p>
+         has the world's oldest natural beauties that can satisfy all tastes.</h6>
      </div>
   </div>
-
-
 
   <div id="aboutNamibia">
      <h4>Namibia, The Land of the Brave</h4>
