--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Eleni Kartsakli"> 
     <meta name="description" content="A travelguide for Namibia">
     <meta name="keywords" content="HTML5, CSS3,Bootstrap5,travelguide, Namibia">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fasthand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="img_569349.png">
-    <script src="app.js"></script>
+    
     <title>Namibia Travelguide</title>
 </head>
 <body>
@@ -90,6 +90,46 @@
       in central Namibia and is its largest city. Windhoek is the social, economic and cultural centre of the Namibia and is the home
       of many enterprises, educational and cultural institutions and historical sites.</p>
    </div>
-<noscript>Your browser doesn't support JavaScript!</noscript>
+
+   <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <img src="sergi-ferrete-Cfuh5uWiUCQ-unsplash copy.jpg" />
+        </div>
+        <div class="swiper-slide">
+          <img src="alan-j-hendry-sJQTvXc7mNY-unsplash.jpg" />
+        </div>
+        <div class="swiper-slide">
+          <img src="sam-power-1MIfdlsqcso-unsplash.jpg" />
+        </div>
+        <div class="swiper-slide">
+          <img src="fernando-murano-miGR9rPrYsQ-unsplash.jpg" />
+        </div>
+      </div>
+      <div class="swiper-pagination"></div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+
+    <!-- Initialize Swiper -->
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+        effect: "coverflow",
+        grabCursor: true,
+        centeredSlides: true,
+        slidesPerView: "auto",
+        coverflowEffect: {
+          rotate: 50,
+          stretch: 0,
+          depth: 100,
+          modifier: 1,
+          slideShadows: true,
+        },
+        pagination: {
+          el: ".swiper-pagination",
+        },
+      });
+    </script>
+ <noscript>Your browser doesn't support JavaScript!</noscript>
 </body>
 </html>
