--- a/index.html
+++ b/index.html
@@ -94,16 +94,13 @@
     slides-per-view="auto" coverflow-effect-rotate="50" coverflow-effect-stretch="0" coverflow-effect-depth="100"
     coverflow-effect-modifier="1" coverflow-effect-slide-shadows="true">
     <swiper-slide>
-      <img src="sergi-ferrete-Cfuh5uWiUCQ-unsplash copy.jpg" />
+      <a href="#"><img src="Namibia-windhoek-1735416 copy.jpg" alt="Windhoek"></a>
     </swiper-slide>
     <swiper-slide>
-      <img src="alan-j-hendry-sJQTvXc7mNY-unsplash.jpg" />
+      <a href="#"><img src="sergi-ferrete-Cfuh5uWiUCQ-unsplash copy.jpg" alt="lion" title="Ethosha National Park"/></a>
     </swiper-slide>
     <swiper-slide>
-      <img src="alan-j-hendry-GVahC1X_hxU-unsplash.jpg" />
-    </swiper-slide>
-    <swiper-slide>
-      <img src="fernando-murano-miGR9rPrYsQ-unsplash.jpg" />
+      <a href="#"><img src="eelco-bohtlingk-t7lGGkOcKWk-unsplash copy.jpg" alt="dune"></a>
     </swiper-slide>
   </swiper-container>
 
