--- a/index.html
+++ b/index.html
@@ -94,13 +94,19 @@
     slides-per-view="auto" coverflow-effect-rotate="50" coverflow-effect-stretch="0" coverflow-effect-depth="100"
     coverflow-effect-modifier="1" coverflow-effect-slide-shadows="true">
     <swiper-slide>
-      <a href="#"><img src="Namibia-windhoek-1735416 copy.jpg" alt="Windhoek"></a>
+      <a href="#"><img src="Namibia-windhoek-1735416 copy.jpg" alt="Windhoek" title="Windhoek"></a>
     </swiper-slide>
     <swiper-slide>
       <a href="#"><img src="sergi-ferrete-Cfuh5uWiUCQ-unsplash copy.jpg" alt="lion" title="Ethosha National Park"/></a>
     </swiper-slide>
     <swiper-slide>
-      <a href="#"><img src="eelco-bohtlingk-t7lGGkOcKWk-unsplash copy.jpg" alt="dune"></a>
+      <a href="#"><img src="eelco-bohtlingk-t7lGGkOcKWk-unsplash copy.jpg" alt="dune" title="The Dunes"></a>
+    </swiper-slide>
+    <swiper-slide>
+      <a href="#"><img src="eelco-bohtlingk-dlrE-kKbjck-unsplash copy.jpg" alt="deadvlei" title="Dead Marsh"></a>
+    </swiper-slide>
+    <swiper-slide>
+      <a href="#"><img src="op23-joshua-kettle-a5uLuYTnnY4-unsplash copy.jpg" alt="sKeleton coast" title="Skeleton Coast"></a>
     </swiper-slide>
   </swiper-container>
 
