--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Namibia Travelguide</title>
 </head>
 <body>
-  <nav class="navbar fixed-top">
+  <nav class="navbar">
     <div class="container-fluid">
        <a class="navbar-brand" href="#" style="color: white;"><i class="bi bi-compass"></i> Explorers</a>
        <span class="navbar-text" style="font-size: 20px;color: white;">Discover the world</span>
