fixed description for min-width:700px

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
      </div>
   </div>
 
-  <div id="aboutNamibia">
+  <div id="aboutNamibia" class="container-fluid">
      <h4>Namibia, The Land of the Brave</h4>
      <h5 style="font-family: 'Fasthand', cursive; font-size: 25px;padding-bottom: 20px;">Unity, Liberty, Justice</h5>
       <p>Namibia, officially known as the Republic of Namibia, is a country in Southern Africa. The name of the country is derived
