added text for windhoek

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     slides-per-view="auto" coverflow-effect-rotate="50" coverflow-effect-stretch="0" coverflow-effect-depth="100"
     coverflow-effect-modifier="1" coverflow-effect-slide-shadows="true">
     <swiper-slide>
-      <a href="#"><img src="Namibia-windhoek-1735416 copy.jpg" alt="Windhoek" title="Windhoek"></a>
+      <a href="#aboutWindhoek"><img src="Namibia-windhoek-1735416 copy.jpg" alt="Windhoek" title="Windhoek"></a>
     </swiper-slide>
     <swiper-slide>
       <a href="#"><img src="sergi-ferrete-Cfuh5uWiUCQ-unsplash copy.jpg" alt="lion" title="Ethosha National Park"/></a>
@@ -109,6 +109,18 @@
       <a href="#"><img src="op23-joshua-kettle-a5uLuYTnnY4-unsplash copy.jpg" alt="sKeleton coast" title="Skeleton Coast"></a>
     </swiper-slide>
   </swiper-container>
+
+  <div id="aboutWindhoek" class="container-fluid text-center">
+     <h4>Windhoek</h4>
+     <p>Windhoek is the center of Namibia - a busy metropolis with a fast-paced lifestyle but not as overwhelming and hectic as the other African cities.
+      It is a clean, orderly and well-organized city influenced by both African and European cultures which is evident not only in the architecture 
+      that includes both modern and German-colonial buildings, but in the local cuisine and lifestyle as well. There are many historical buildings like Alte Feste or
+      the Christkirche, museums like the Independence Memorial Museum and galleries like the National Art Gallery of Namibia.
+      Visitors can rest in many green areas and parks around the city like the National Botanical Gardens, the Zoo Park or the Daan Viljoen Game Park. Of course,
+      there are lots of restaurants, bars and cafes where you can have a taste of the local or German cuisine and drink lots of beer! Learn more</p>
+      
+      
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
 <noscript>Your browser doesn't support JavaScript!</noscript>
